--- a/kernel/build
+++ b/kernel/build
@@ -37,6 +37,7 @@ fi
 cd $CADMIUMROOT/tmp/linux-$ARCH
 
 [ -f .config ] || cp $CADMIUMROOT/kernel/config.$ARCH .config
+[ -f .config ] || cp $CADMIUMROOT/baseboard/$BASEBOARD/kernel-jacuzzi-config .config
 
 if [ $KERNEL = libre ]; then
 	# it looks better this way
